welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
def posFinale() = { getX()==getMondeLargeur()-1 && getY() == getMondeHauteur()-1};
def posInter() = { getX()==getMondeLargeur()-1 && getY() == 0};
override def run() {
  
  


""""var compt = 0;
while (!posFinale) {ecritMessage(""+compt);compt+=1; if(getY()==0) {diag+=1; setPos(0,diag%7)} 
                    else {if (getX()==6) {diag+=1;setPos(diag,6)} else {setPos(getX()+1,getY()-1)}}} ;ecritMessage(""+compt);compt+=1""""""





while (!posInter()){
  if (getY()==0) {diag+=1; setPos(0,diag)}
  else {setPos(getX()+1,getY()-1}
}
  setPos(1,getMondeHauteur()-1)
  
  
}